--- a/Todo/todo.css
+++ b/Todo/todo.css
@@ -14,6 +14,9 @@ body{
     border-radius: 10px;
     
 }
+.heading{
+    text-align: center;
+}
 
 .btn{
  padding: 5px;
@@ -31,10 +34,11 @@ input{
 
 }
 
-.textholder{
+.addtodo{
     padding: 15px;
    }
 
 p{
     font-size:20px;
+    display:inline-block;
 }
