--- a/Todo/todo.css
+++ b/Todo/todo.css
@@ -1,10 +1,9 @@
 *{
     margin: 10;
 }
-
 body{
-    background: rgb(255, 2, 107);
-
+  background: rgb(241, 161, 194);  
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 #todos{
@@ -45,4 +44,26 @@ p{
 
 img{
     margin:10px; 
+    border-radius: 10px;
+}
+
+#addcontainer,#done{
+    background: rgb(224, 37, 115);
+    border-radius: 10px;
+    
+}
+
+#done{
+    background: rgb(255, 2, 107);
+    border-radius: 10px;
+    
+}
+
+li{
+    margin:5px;
+}
+
+input{
+    display: block;
+    margin:5px;
 }
