--- a/super/super.css
+++ b/super/super.css
@@ -5,7 +5,9 @@
 
 body{
   padding: 20px;
+  background-color: blue;
 }
+
 
 .addtocart{
 background-color: yellow;
@@ -21,3 +23,5 @@ padding: 5px;
 button{
   padding:5px;
 }
+
+/* property: value */
