--- a/DOM-ALICE/alice.css
+++ b/DOM-ALICE/alice.css
@@ -1,10 +1,11 @@
 *{
-    margin:0;
-    padding:5px;
 
 }
+
 body{
     text-align: center;
+    background-color: black;
+    color: white;
 }
 
 .h1header{
