--- a/super/Amazon/amazon.css
+++ b/super/Amazon/amazon.css
@@ -16,4 +16,24 @@ li{
     
 }
 
+button{
+    margin:4px
+}
+.cs-order{
+    background-color: green;
+    color:black
+
+
+}
+
+.cs-buy{
+    background-color: orange;
+
+
+}
+
+.cs-add{
+    background-color: yellow;
+
+}
 
